--- a/style.css
+++ b/style.css
@@ -107,21 +107,48 @@ body {
 .formSide .area {
   display: flex;
   flex-direction: column;
+  gap: 20px;
   background-color: #ffffff;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.086);
   padding: 20px;
 }
 
 .formSide .area form {
-  display: flex;
-  flex-direction: row;
-  margin: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: auto auto;
+  flex-direction: column;
 }
 
-
-.formSide .area .field {
+.formSide .area div {
   display: flex;
   flex-direction: column;
+  padding-right: 20px;
+  padding-bottom: 20px;
+}
+
+.formSide .area label {
+  text-transform: uppercase;
+  color: rgb(31, 31, 31);
+  font-size: 12px;
+}
+
+.formSide .area input {
+  border-color: rgba(0, 0, 0, 0.179);
+  height: 30px;
+  font-size: 15px;
+  border-radius: 5px;
+  border-width: 1px;
+}
+
+.formSide .area input:focus {
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.086);
+  outline: solid 1px blue;
+}
+
+.formSide .area input:invalid {
+  box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.086);
+  outline: solid 1px red;
 }
 
 .formSide .confirm {
