fixed create account button spelling and size

--- a/style.css
+++ b/style.css
@@ -163,12 +163,15 @@ body {
   color: white;
   border: none;
   box-shadow: 0px 10px 10px 0px rgba(0, 0, 0, 0.086);
+  font-size: 15px;
+  font-weight: bold;
 }
 
 .formSide .confirm .haveAccount {
   margin-top: 50px;
   display: flex;
   flex-direction: row;
+  font-size: 15px;
   gap: 10px;
 }
 
